# uipf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
code/: .gitignore  CMakeLists.txt  main-console.cpp  main-gui.cpp  uipf-gui.desktop  uipf.desktop
code/framework/: Configuration.cpp  Configuration.hpp  Context.cpp  Context.hpp  DataManager.cpp  DataManager.hpp  Elem.cpp  Elem.hpp  ErrorException.hpp  GUIEventDispatcher.cpp  GUIEventDispatcher.h  GUIEventDispatcher.hpp  InvalidConfigException.hpp  Logger.cpp  Logger.hpp  MetaData.cpp  MetaData.hpp  ModuleBase.cpp  ModuleBase.cpp~  ModuleBase.hpp  ModuleBase.hpp~  ModuleConfig.cpp  ModuleConfig.hpp  ModuleInterface.hpp  ModuleManager.cpp  ModuleManager.hpp  MyMatrix.cpp  MyMatrix.hpp  MyString.cpp  MyString.hpp  ProcessingStep.hpp  StdIncl.hpp  Utils.cpp  Utils.hpp  uipf.hpp.in
code/framework/types/: Bool.cpp  Bool.hpp  Data.cpp  Data.hpp  Elem.hpp  Float.cpp  Float.hpp  Integer.cpp  Integer.hpp  List.hpp  Map.hpp  Matrix.cpp  Matrix.hpp  MyMatrix.cpp  MyMatrix.hpp  MyString.hpp  String.cpp  String.hpp
code/gui/: ComboBoxSourceOutput.cpp  ComboBoxSourceOutput.hpp  ComboBoxSourceStep.cpp  ComboBoxSourceStep.hpp  ImageWindow.cpp  ImageWindow.hpp  MainWindow.cpp  MainWindow.hpp  ProcessingStepInputs.cpp  ProcessingStepInputs.hpp  ProcessingStepParams.cpp  ProcessingStepParams.hpp  RunWorkerThread.cpp  RunWorkerThread.h  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  processingstepsettings.cpp  processingstepsettings.h
code/gui/graph/: edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  node.cpp  node.h
code/gui/models/: InputsDelegate.cpp  InputsDelegate.hpp  ParamsModel.cpp  ParamsModel.hpp
code/modules/: DummyModule.cpp  DummyModule.hpp  GaussianModule.cpp  GaussianModule.hpp  GradientModule.cpp  LoadImageModule.cpp  LoadImageModule.hpp  LongRunningDummyModule.cpp  LongRunningDummyModule.hpp  ShowImageModule.cpp  ShowImageModule.hpp  StoreImageModule.cpp  StoreImageModule.hpp
code/modules/data/: AddListItemModule.cpp  AddListItemModule.hpp  SelectListItemModule.cpp  SelectListItemModule.hpp
code/modules/dummy/: DummyModule.hpp  LongRunningDummyModule.cpp  LongRunningDummyModule.hpp
code/modules/improc/: ConvolutionModule.cpp  ConvolutionModule.hpp  GaussianModule.cpp  GaussianModule.hpp  GradientModule.cpp  MergeChannelsModule.cpp  MergeChannelsModule.hpp  ResizeModule.cpp  ResizeModule.hpp  SplitChannelModule.cpp  SplitChannelModule.hpp  SplitChannelsModule.cpp  SplitChannelsModule.hpp
code/modules/io/: LoadImageModule.cpp  LoadImageModule.hpp  ShowImageListModule.cpp  ShowImageListModule.hpp  ShowImageModule.cpp  ShowImageModule.hpp  StoreImageModule.cpp  StoreImageModule.hpp
code/playground/qt_cmake/: CMakeLists.txt
design/: CoreFramework_ClassDesign_Draw.io.xml
doc/: README.md  code-style.md  extending-modules.md  extending-types.md  modules.md  requirements.md  simpleConsoleEntry.txt  summary.md  system-overview.md  system_overview.md  usage-concepts.md  usage-console.md  usage-gui.md
doc/presentations/: .gitignore
doc/presentations/1st_overview/: Makefile  README.md  linehighlight.sty  presentation.pdfpc  presentation.tex
doc/presentations/Final_Presentation/: Makefile  README.md  finalPresentation.pdfpc  finalPresentation.tex  metadata.cpp
doc/presentations/Final_Presentation/images/howto/: format.yaml
doc/presentations/Final_Presentation/images/intro/: simpleChain.yaml
examples/: Tutorial example to load and show image color.yaml  Tutorial example to load and show image.yaml  complex.yaml  convolution.yaml  gaussOnChannel1.yaml  guassiantestexample.yaml  nonsense.yaml  simple.yaml  splitchannels.yaml
examples/BoostExample/: Makefile  main.cpp
testdata/: ConvAndGauss.yaml  ConvAndGaussCircularDependency.yaml  LoadAndShowManyImages.yaml  LoadAndShowTwoImages.yaml  imagesource.txt
